[project]
name = "json-diff-cli-lizer"
version = "0.2.0"
description = "Colorized JSON diff for terminal — compare two JSON files with red/green highlights / 终端彩色 JSON 对比工具"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Lizer", email = "lizer@lizeraidev.github.io"}]
keywords = ["json", "diff", "cli", "terminal", "compare"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"

[project.scripts]
json-diff = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
